--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -50,3 +50,9 @@ img {
   max-width: 100%;
   height: auto;
 }
+hr {
+  border-radius: 4px;
+  height: 2px;
+  border: 1px solid $secondary-color;
+  opacity: 0.5;
+}
