--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,7 +3,7 @@
 @import "../utils/breakpoints";
 
 header {
-  @include bordered($accent-color-2);
+  background-color: $header-color;
 }
 .links {
   display: none;
@@ -23,13 +23,13 @@ header {
 .links {
   li {
     a {
-      padding: 32px 0;
+      padding: 5px 0;
       display: block;
     }
   }
 }
 .links__item {
-  color: $secondary-text-color;
+  color: $link-color;
   text-decoration: none;
   font-size: 14px;
   font-weight: 500;
@@ -38,7 +38,7 @@ header {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
-    color: $primary-color;
+    color: $secondary-color;
   }
 }
 
@@ -101,24 +101,24 @@ header {
   margin-right: 100px;
 }
 .nav-info__text {
-  color: $text-color;
+  color: $link-color;
   text-decoration: none;
   font-size: 14px;
   font-weight: 500;
   display: block;
-  padding: 10px 0;
+  padding: 20px 0;
   transition: 250ms;
   transition-property: color, fill;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
-    color: $primary-color;
+    color: $secondary-color;
   }
   @media screen and (min-width: $tablet) {
     padding: 10px 0;
   }
   @media screen and (min-width: $desktop) {
-    padding: 24px 0;
+    padding: 14px 0;
   }
 }
 
@@ -129,7 +129,7 @@ header {
   }
 }
 .current {
-  color: $primary-color;
+  color: $button-hover-color;
   position: relative;
 }
 .current::after {
@@ -137,7 +137,7 @@ header {
   height: 4px;
   width: 100%;
   border-radius: 2px;
-  background-color: $primary-color;
+  background-color: $secondary-color;
   position: absolute;
   left: 0;
   bottom: -1px;
