--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -1,15 +1,23 @@
 @import "../utils/vars.scss";
 @import "../utils/breakpoints";
 .hero {
-  background-image: url("../images/Img.png");
+  background-image: url("../../images/banner5.jpg");
   background-size: cover;
-  padding: 200px 0;
+  background-position: center;
+  padding: 150px 0;
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 .hero__content {
   text-align: center;
+  // background-color: $footer-text-color;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .hero__title {
-  margin: 0 0 30px 0;
+  margin: 0 0 10px 0;
   color: $secondary-color;
   font-family: "Roboto";
   font-style: normal;
@@ -25,6 +33,24 @@
     font-size: 44px;
   }
 }
+.hero__description{
+  margin: 0 0 10px 0;
+  color: $secondary-color;
+  // font-family: "Roboto";
+  // font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  // line-height: 60px;
+  // letter-spacing: 0.06em;
+  text-transform: uppercase;
+  @media screen and (min-width: $tablet) {
+    font-size: 24px;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 24px;
+  }
+}
+
 .hero__button {
   background-color: $primary-color;
   padding: 10px 20px;
@@ -40,5 +66,27 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   &:hover {
     background-color: $button-hover-color;
+  }
+}
+.hero__card {
+  background-color: $hero-card-color;
+  width: fit-content;
+  height: fit-content;
+  text-shadow: 1px 1px 1px black;
+  border-radius: 5px;
+  padding: 3rem 3rem;
+  @media screen and (min-width: $tablet) {
+    padding: 3rem 7rem;
+  }
+  @media screen and (min-width: $desktop) {
+    padding: 3rem 10rem;
+  }
+}
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
