--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -1,10 +1,10 @@
-$primary-color: #2196f3;
+$primary-color: #9961f9;
 $secondary-color: #ffffff;
 $accent-color: #eeeeee;
 $accent-color-2: #ececec;
 $footer-color: #2f303a;
 $text-color: #757575;
-$button-hover-color: #188ce8;
+$button-hover-color: #673AB7;
 $background-color: #f5f4fa;
 $footer-text-color: rgba(255, 255, 255, 0.6);
 $social-img-background-color: rgba(255, 255, 255, 0.1);
@@ -13,7 +13,10 @@ $icon-gray: #afb1b8;
 $form-text-color: #000000;
 $button-gray: rgba(0, 0, 0, 0.1);
 $wwd-text-color: rgba(47, 48, 58, 0.8);
-$card-overlay-color: rgba(33, 150, 243, 0.9);
+$card-overlay-color: #9961f9;
 $form-gray: rgba(33, 33, 33, 0.2);
 $subscribe-color: rgba(255, 255, 255, 0.3);
 $backdrop-color: rgba(0, 0, 0, 0.2);
+$hero-card-color:rgba(29, 39, 38, 0.4);
+$header-color:#302e2e;
+$link-color:#cdc5c5;
