finished about me section

--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,7 @@ header {
 }
 
 .nav__logo {
-  color: #9961f9;
+  color: #ffffff;
   font-family: "Raleway";
   font-size: 24px;
   font-weight: 700;
@@ -245,7 +245,7 @@ header {
 }
 
 .current {
-  color: #673AB7;
+  color: #ffffff;
   position: relative;
 }
 
@@ -556,16 +556,6 @@ header {
   font-style: normal;
   text-transform: uppercase;
   text-align: center;
-}
-@media screen and (min-width: 768px) {
-  .benefits__title:not(:last-child) {
-    text-align: left;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .benefits__title:not(:last-child) {
-    text-align: left;
-  }
 }
 
 .benefits__image {
