--- a/sass/sections/_our-team.scss
+++ b/sass/sections/_our-team.scss
@@ -91,7 +91,8 @@
   }
 }
 .our-team__section {
-  background-color: $background-color;
+  // background-color: $background-color;
+  background-color: $form-background-color;
 }
 .our-team__content {
   // width: 1200px;
