--- a/sass/sections/_modal.scss
+++ b/sass/sections/_modal.scss
@@ -24,10 +24,15 @@
 .modal {
   position: relative;
   padding: 40px;
-  background-color: $secondary-color;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  @media screen and (min-width: $tablet) {
+  padding-left: 5em;
+  padding-right: 5em;
+  }
+  @media screen and (min-width: $desktop) {
+    padding-left: 10em;
+    padding-right: 10em;
+  }
 }
 .modal__name {
   font-weight: 700;
