added job and portfolio tabs

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "./sections/modal";
 @import "./sections/service";
 @import "./sections/product";
+@import "./sections/job";
 @import "./sections/projects";
 @import "./components/footer";
 @import "./sections/social";
