--- a/css/main.css
+++ b/css/main.css
@@ -1116,6 +1116,43 @@ header {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.job__card {
+  background-color: #51c5e8;
+  line-height: 16px;
+  padding: 63px 24px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  border-radius: 4px;
+  color: #ffffff;
+  fill: #ffffff;
+}
+
+.job__heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.job__subheading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.job__point {
+  list-style-type: disc;
+  margin-left: 1em;
+}
+
+.job__description {
+  font-weight: 400;
+  font-size: 14px;
+}
+
 .projects {
   display: flex;
   flex-wrap: wrap;
