fixing bgimage bug

--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -1,7 +1,7 @@
 @import "../utils/vars.scss";
 @import "../utils/breakpoints";
 .hero {
-  background-image: url("../../images/banner5.jpg");
+  background-image: url("../../images/pexels-tatiana-10320872.jpg");
   background-size: cover;
   background-position: center;
   padding: 150px 0;
