--- a/css/main.css
+++ b/css/main.css
@@ -426,7 +426,7 @@ header {
 }
 
 .hero {
-  background-image: url("../../images/banner5.jpg");
+  background-image: url(https://images.pexels.com/photos/10320872/pexels-photo-10320872.jpeg);
   background-size: cover;
   background-position: center;
   padding: 150px 0;
