--- a/sass/sections/_job.scss
+++ b/sass/sections/_job.scss
@@ -2,14 +2,25 @@
 
 // }
 .job__card {
-  background-color: $primary-color;
+  // background-color: $primary-color;
   line-height: 16px;
   padding: 63px 24px;
   line-height: 28px;
   letter-spacing: 0.03em;
   border-radius: 4px;
-  color: $secondary-color;
+  // color: $secondary-color;
   fill: $secondary-color;
+  position: relative;
+}
+.job__card:not(:last-child)::after {
+  content: "";
+  height: 2px;
+  width: 100%;
+  border-radius: 2px;
+  background-color: $divider-color;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
 }
 .job__heading {
   display: flex;
@@ -17,6 +28,7 @@
   justify-content: space-between;
   font-weight: 400;
   font-size: 18px;
+  font-weight: bold;
 }
 .job__subheading {
   display: flex;
@@ -24,6 +36,8 @@
   justify-content: space-between;
   font-weight: 400;
   font-size: 16px;
+  font-style: italic;
+  color: $wwd-text-color;
 }
 .job__point {
   list-style-type: disc;
@@ -31,5 +45,15 @@
 }
 .job__description {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 16px;
+}
+.job__website {
+  padding-top: 1em;
+  font-weight: 400;
+  font-size: 16px;
+  text-decoration: underline;
+  color: $primary-color;
+}
+.job__link:visited {
+  color: $primary-color;
 }
