--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -21,3 +21,4 @@ $hero-card-color:rgba(29, 39, 38, 0.4);
 $header-color:#302e2e;
 $link-color:#cdc5c5;
 $form-background-color:#f1f2f2;
+$divider-color:#e8e8e8;
